# rzk-game

./: .gitignore  CHANGELOG.md  Makefile  PR-bundler-cache.md  PR-error-position-squiggles.md  PR-export-import-progress.md  PR-fix-bundler-portability.md  PR-format-action.md  PR-phase3-game-spec-loader.md  PR-phase5-hints.md  PR-release-workflow-and-action.md  PR-release-workflow.md  README.md  cabal.project  cabal.project.native  first-hom2-level.md  flake.nix  game.json  ghc_wasm_jsffi.js  hole-interaction-storyboard-1.md  ideas-1.md  index.html  ipl-exercises-ru.md  loadtest.mjs  notes-2026-06-18.md  phase2-deferred-handoff.md  phase3-handoff.md  phase4-handoff.md  phase5-handoff.md  progresscheck.mjs  roadmap-1.md  rzk-game.cabal  rzk-probe-notes-1.md  selftest.mjs
.github/workflows/: ci.yml  release.yml
app/: Main.hs
bundler/: Bundle.hs
docs/: authoring.md
game/: game.yaml
game/levels/: ap-hom.rzk.md  arr-in-arr-is-segal.rzk.md  associativity-arr-segal.md  associativity-intro.md  associativity-summary.md  compose-witness.rzk.md  compose.rzk.md  composition-intro.md  composition-summary.md  const-triangle.rzk.md  functions-intro.md  functions-summary.md  how-holes-work.md  id-arr-in-arr.rzk.md  lut.rzk.md  map-point.rzk.md  morphisms-intro.md  morphisms-summary.md  my-id.rzk.md  rut.rzk.md  tetrahedron-associative-is-segal.rzk.md  triple-comp-is-segal.rzk.md  unfolding-square.rzk.md  witness-associative-is-segal.rzk.md  witness-square-comp-is-segal.rzk.md
rzk-game-action/: README.md  action.yml
spikes/phase0-wasm/: Main.hs  NOTES.md  app.cabal  cabal.project  rzk-build-type-simple-pr-brief.md  selftest.mjs
src/RzkGame/: Content.hs  Format.hs  Highlight.hs  Level.hs  Loader.hs  Parse.hs  Save.hs  Section.hs  Spec.hs
static/: index.html  index.js  prose.js
test/: SpecTest.hs
tools/: FormatGame.hs
