cabal-version: 2.2
name:          rzk-game
version:       0.1.0.0
synopsis:      Engine for interactive Rzk games (miso + GHC WebAssembly backend)
category:      Web, Math
build-type:    Simple

flag interactive
  description: Enable features for interactive use (GHCi browser mode)
  default:     False
  manual:      True

-- | Pure engine logic: the level model and the check against rzk. No miso, so
-- it uses the ordinary Prelude (the executable below remaps Prelude to miso's).
library
  hs-source-dirs:   src
  exposed-modules:
    RzkGame.Level
    RzkGame.Section
    RzkGame.Content
    RzkGame.Highlight
    RzkGame.Spec
    RzkGame.Loader
    RzkGame.Save
    RzkGame.Format
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , text
    , rzk
  default-language: Haskell2010
  ghc-options:      -Wall

-- | The miso application. Wires the L0 UI to the engine and exports the wasm
-- entry points.
executable rzk-game
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base
    , containers
    , text
    , miso
    , rzk-game
  mixins:
    miso,
    miso (Miso.Prelude as Prelude),
    base hiding (Prelude)
  default-language: Haskell2010
  -- miso builds only under the wasm GHC (it needs a newer template-haskell than
  -- a stock native GHC ships). Off wasm, the app is not built — which also keeps
  -- miso out of the native solve, so the library, bundler, and tests resolve.
  if !arch(wasm32)
    buildable: False
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
      "-optl-Wl,--export=hs_selftest"
      "-optl-Wl,--export=hs_gamecheck"
      "-optl-Wl,--export=hs_progresscheck"
    cpp-options: -DWASM
    if flag(interactive)
      cpp-options: -DINTERACTIVE

-- | The native bundle step: read @game.yaml@ + @levels/*.rzk.md@ and write the
-- single @public/game.json@ the wasm app fetches. Native only (uses libyaml via
-- the @yaml@ package); never built for wasm.
executable rzk-game-bundle
  main-is:          Bundle.hs
  hs-source-dirs:   bundler
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , text
    , yaml
  default-language: Haskell2010
  ghc-options:      -Wall
  if arch(wasm32)
    buildable: False

-- | The native authoring tool behind @make format-game@: rewrite the @game/@
-- prelude blocks in place with rzk's canonical formatting (via
-- 'RzkGame.Format'). Not part of the normal build; never built for wasm.
executable rzk-game-format
  main-is:          FormatGame.hs
  hs-source-dirs:   tools
  build-depends:
      base
    , directory
    , filepath
    , text
    , rzk-game
  default-language: Haskell2010
  ghc-options:      -Wall
  if arch(wasm32)
    buildable: False

-- | Native, headless tests for the pure Phase 3 pipeline ('RzkGame.Spec' and
-- 'RzkGame.Loader'): the level-source splitter, the goal reconstruction, and
-- that 'buildGame' on a bundle reproduces the built-in 'RzkGame.Content' model.
test-suite rzk-game-spec
  type:             exitcode-stdio-1.0
  main-is:          SpecTest.hs
  hs-source-dirs:   test
  build-depends:
      base
    , aeson
    , bytestring
    , containers
    , text
    , rzk-game
  default-language: Haskell2010
  ghc-options:      -Wall
  if arch(wasm32)
    buildable: False
